--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 14:05:02 2018</p>
+         Last Run: Fri Nov  2 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>51</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -184,7 +184,7 @@
                "data":[
                  "66",
                  "63",
-                 "51"
+                 "50"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 14:05:02 2018</p>
+         Last Run: Fri Nov  2 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -245,39 +245,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>24</td>
-                        <td>58</td>
+                        <td>43</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>88</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>18</td>
-                        <td>53</td>
+                        <td>39</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>19</td>
-                        <td>48</td>
-                        <td>1</td>
+                        <td>Chance of Rain</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>41</td>
+                        <td>52</td>
+                        <td>0</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>71</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -306,7 +306,7 @@
                "data":[
                  "5",
                  "6",
-                 "9"
+                 "6"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "7",
                  "8",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "18",
-                 "19"
+                 "43",
+                 "39",
+                 "41"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "58",
-                 "53",
-                 "48"
+                 "61",
+                 "56",
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "80",
-                 "71"
+                 "93",
+                 "95",
+                 "92"
                ]
              }
            ]
@@ -439,9 +439,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 14:05:02 2018</p>
+         Last Run: Fri Nov  2 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>45</td>
-                        <td>81</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>21</td>
+                        <td>80</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>N</td>
-                        <td>98</td>
+                        <td>8</td>
+                        <td>ESE</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-8</td>
-                        <td>42</td>
-                        <td>81</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-6</td>
+                        <td>9</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>N</td>
-                        <td>98</td>
+                        <td>8</td>
+                        <td>E</td>
+                        <td>95</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>41</td>
-                        <td>83</td>
+                        <td>Overcast</td>
+                        <td>-4</td>
+                        <td>-7</td>
+                        <td>9</td>
+                        <td>84</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>N</td>
-                        <td>98</td>
+                        <td>6</td>
+                        <td>ESE</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
-                 "-8",
-                 "-9"
+                 "-6",
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
-                 "-4",
-                 "-5"
+                 "-3",
+                 "-3",
+                 "-4"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "45",
-                 "42",
-                 "41"
+                 "21",
+                 "9",
+                 "9"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "81",
-                 "83"
+                 "80",
+                 "83",
+                 "84"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "98",
-                 "98"
+                 "96",
+                 "95",
+                 "95"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 14:05:02 2018</p>
+         Last Run: Fri Nov  2 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,37 +676,37 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>76</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>7</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 PM</td>
+                        <td>Clear</td>
+                        <td>-9</td>
+                        <td>-13</td>
+                        <td>5</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
                         <td>7</td>
                      </tr>
                      <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
-                        <td>5</td>
-                        <td>69</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>W</td>
-                        <td>7</td>
-                     </tr>
-                     <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-12</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>7</td>
                      </tr>
                   </tbody>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-12",
-                 "-12",
-                 "-12"
+                 "-13",
+                 "-13",
+                 "-14"
                ]
              },
              {
@@ -746,9 +746,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-8",
-                 "-8",
-                 "-8"
+                 "-9",
+                 "-9",
+                 "-10"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "69",
-                 "68"
+                 "76",
+                 "75",
+                 "76"
                ]
              },
              {
