--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 17:05:02 2018</p>
+         Last Run: Fri Nov  2 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -45,12 +45,12 @@
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>1</td>
-                        <td>5</td>
-                        <td>67</td>
+                        <td>4</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>63</td>
+                        <td>62</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>6</td>
                         <td>4</td>
                         <td>3</td>
-                        <td>56</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "6",
-                 "5",
+                 "4",
                  "3"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "67",
-                 "56"
+                 "68",
+                 "57"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "74",
-                 "63",
+                 "62",
                  "58"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 17:05:02 2018</p>
+         Last Run: Fri Nov  2 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>43</td>
+                        <td>59</td>
                         <td>57</td>
                         <td>1</td>
                         <td>13</td>
@@ -260,7 +260,7 @@
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>37</td>
+                        <td>48</td>
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
@@ -272,12 +272,12 @@
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>43</td>
+                        <td>38</td>
                         <td>52</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "43",
-                 "37",
-                 "43"
+                 "59",
+                 "48",
+                 "38"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "data":[
                  "98",
                  "97",
-                 "91"
+                 "92"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 17:05:02 2018</p>
+         Last Run: Fri Nov  2 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>21</td>
-                        <td>80</td>
+                        <td>10</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -479,7 +479,7 @@
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>95</td>
                      </tr>
                      <tr>
@@ -490,7 +490,7 @@
                         <td>9</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>ESE</td>
                         <td>95</td>
                      </tr>
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "21",
+                 "10",
                  "9",
                  "9"
                ]
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "81",
                  "83",
                  "85"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 17:05:02 2018</p>
+         Last Run: Fri Nov  2 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,26 +676,26 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
-                        <td>5</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>4</td>
                         <td>76</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>7</td>
+                        <td>SW</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
-                        <td>5</td>
+                        <td>-10</td>
+                        <td>-14</td>
+                        <td>4</td>
                         <td>75</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>7</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>76</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>7</td>
+                        <td>WSW</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
-                 "-13",
+                 "-14",
+                 "-14",
                  "-14"
                ]
              },
@@ -746,8 +746,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
-                 "-9",
+                 "-10",
+                 "-10",
                  "-10"
                ]
              }
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
+                 "4",
+                 "4",
                  "4"
                ]
              },
@@ -818,7 +818,7 @@
                "data":[
                  "76",
                  "75",
-                 "76"
+                 "75"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "7",
-                 "7"
+                 "3",
+                 "3",
+                 "3"
                ]
              }
            ]
