--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 19:05:03 2018</p>
+         Last Run: Fri Nov  2 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-1</td>
-                        <td>6</td>
-                        <td>80</td>
                         <td>0</td>
+                        <td>-3</td>
                         <td>6</td>
+                        <td>82</td>
+                        <td>0</td>
+                        <td>8</td>
                         <td>SW</td>
-                        <td>77</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,19 +46,19 @@
                         <td>3</td>
                         <td>1</td>
                         <td>4</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>1</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>65</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>3</td>
-                        <td>57</td>
+                        <td>3</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
+                 "-3",
                  "1",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "3",
-                 "6"
+                 "5"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "68",
-                 "57"
+                 "82",
+                 "69",
+                 "59"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "77",
-                 "65",
+                 "68",
+                 "63",
                  "59"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 19:05:03 2018</p>
+         Last Run: Fri Nov  2 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
-                        <td>60</td>
-                        <td>57</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>51</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>98</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>48</td>
-                        <td>51</td>
+                        <td>41</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>NW</td>
-                        <td>97</td>
+                        <td>NNW</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>38</td>
-                        <td>52</td>
-                        <td>0</td>
+                        <td>34</td>
+                        <td>47</td>
+                        <td>1</td>
                         <td>14</td>
-                        <td>NW</td>
-                        <td>93</td>
+                        <td>NNW</td>
+                        <td>86</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "5",
+                 "6",
                  "6",
                  "9"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "7",
+                 "8",
                  "8",
                  "9"
                ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "60",
-                 "48",
-                 "38"
+                 "51",
+                 "41",
+                 "34"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "51",
-                 "52"
+                 "54",
+                 "49",
+                 "47"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "98",
-                 "97",
-                 "93"
+                 "90",
+                 "92",
+                 "86"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 19:05:03 2018</p>
+         Last Run: Fri Nov  2 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>11</td>
-                        <td>80</td>
+                        <td>12</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ESE</td>
@@ -487,7 +487,7 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>10</td>
+                        <td>9</td>
                         <td>84</td>
                         <td>0</td>
                         <td>8</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "11",
+                 "12",
                  "10",
-                 "10"
+                 "9"
                ]
              },
              {
@@ -601,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "81",
                  "82",
                  "84"
                ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 19:05:03 2018</p>
+         Last Run: Fri Nov  2 20:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -706,7 +706,7 @@
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                   </tbody>
